Added loading of multiple fonts at the same time. Added font loaded checking so fonts will only be loaded once (Javascript check). Fixed example errors in README

--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "type": "git",
     "url": "https://github.com/eVisit/react-native-dynamic-fonts.git"
   },
-  "author": "eVisit (Wyatt Greenway)"
+  "author": "eVisit (Wyatt Greenway)",
+  "dependencies": {}
 }
